[#25] push notification 환경설정
### Description
- firebase plist 파일 추가
- appdelegate 설정
- pod 추가 및 설치
- 디바이스 토큰 서버에 전달하기 (기기 연결 후)

### Related Issue
Resolve #25

--- a/Journey/Podfile
+++ b/Journey/Podfile
@@ -10,4 +10,6 @@ target 'Journey' do
 	pod 'Moya', '~> 14.0'
 	pod 'SwiftLint'
 	pod 'lottie-ios'
+	pod 'Firebase/Analytics'
+	pod 'Firebase/Messaging'
 end
