[#118] 소확행 커뮤니티 수정사항 반영
- 블러 강도 조절
- 텍스트 섀도우

--- a/Journey/Podfile
+++ b/Journey/Podfile
@@ -13,4 +13,6 @@ target 'Journey' do
 	pod 'Firebase/Analytics'
 	pod 'Firebase/Messaging'
 	pod 'IQKeyboardManagerSwift'
+	pod 'SnapKit'
+	pod 'Then'
 end
