[#287] FontBlaster 도입, G마켓 Sans 폰트 추가
### Description
- FontBlaster 도입
- G마켓 Sans 폰트 추가

FontBlaster 설치 후 AppDelegate에서 FontBlaster.blast()를 호출해
plist에 폰트를 하나하나 등록하지 않아도 프로젝트에 폰트가 로드될 수 있게 했습니다.

### Related Issue
Resolve #287

--- a/Journey/Podfile
+++ b/Journey/Podfile
@@ -6,7 +6,6 @@ target 'Journey' do
   use_frameworks!
 
   # Pods for Journey
-	pod 'Alamofire', '~> 5.4'
 	pod 'Moya', '~> 14.0'
 	pod 'SwiftLint'
 	pod 'lottie-ios'
@@ -16,4 +15,5 @@ target 'Journey' do
 	pod 'SnapKit'
 	pod 'Then'
 	pod 'Kingfisher'
+	pod 'FontBlaster'
 end
