[#643] 강제 업데이트 로직

--- a/Mohaeng/Podfile
+++ b/Mohaeng/Podfile
@@ -20,5 +20,6 @@ target 'Mohaeng' do
 	pod 'JTAppleCalendar'
 	pod 'KakaoSDKCommon'
 	pod 'KakaoSDKAuth'
-	pod 'KakaoSDKUser'  
+	pod 'KakaoSDKUser'
+	pod 'Siren'  
 end
